chore: set fixed image dimensions to avoid flickering while loading #9

--- a/src/app/pages/overview/components/event-list-item/event-list-item.component.scss
+++ b/src/app/pages/overview/components/event-list-item/event-list-item.component.scss
@@ -25,7 +25,8 @@
 }
 
 .event-image {
-  max-height: 200px;
+  height: 200px;
+  width: calc(100% + 32px);
   object-fit: cover
 }
 
